--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@
   /*******************************************/
 
   body {
-    height: 100vh;
-    background-color: rgba(234,234,234,1);
+    min-height: 100%;
+    background-color: #d3deee;
+/* background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%); */
     font-family: 'Jost', sans-serif;
   }
 h1 {
